<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_string">Add Expense</string>
    <string name="Label_Amount">Amount :</string>
    <string name="hint_enter_amount_spent">Enter Amount Spent</string>
    <string name="label_date">Date :</string>
    <string name="hint_select_date">Select Date</string>
    <string name="label_description">Description :</string>
    <string name="hint_description">Enter description</string>
    <string name="button_label_save">Add Expense</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="string_expense_tracker">Expense Tracker</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="logout_shortcut_short_label">Logout</string>
    <string name="logout_shortcut_long_label">Logout</string>
    <string name="logout_disabled_message">Logout Disabled</string>
    <string name="today_s_expenses_string">Today\'s Expenses</string>
    <string name="add_expense_string">Add Expense</string>
    <string name="view_expense_string">View Expenses</string>
    <string name="monthly_expense_string">Monthly Expense</string>
    <string name="yesterday_s_expenses_string">Yesterday\'s Expenses</string>
    <string name="yearly_expense_string">Yearly Expense</string>
    <string name="yesterday_string">Yesterday</string>
    <string name="default_value_string">₹ 99.99</string>
    <string name="month_string">Month</string>
    <string name="year_string">Year</string>
    <string name="today_s_expenses">Today\'s Expenses</string>
    <string name="description_default_string">Description</string>
    <string name="date_default_string">Date</string>
    <string name="splash_image_content_description">The Expense Tracker App Icon</string>
    <string name="forgot_password_string">Forgot Password?</string>
    <string name="or_label_string">OR</string>
    <string name="create_account_string">Create Account</string>
    <string name="expense_tracker_login_image_string">Expense Tracker Login Image</string>
</resources>
