<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="Logout"
        android:enabled="true"
        android:icon="@drawable/logout_icon"
        android:shortcutShortLabel="@string/logout_shortcut_short_label"
        android:shortcutLongLabel="@string/logout_shortcut_long_label"
        android:shortcutDisabledMessage="@string/logout_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.vishi.expensetracker"
            android:targetClass="com.vishi.expensetracker.LogoutActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>