<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_background"
        android:contentDescription="@string/expense_tracker_login_image_string" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/labelTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alex_brush"
        android:text="@string/string_expense_tracker"
        android:textColor="@color/colorBlack"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextViewId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextInputEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="@string/prompt_username"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayoutId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/usernameTextInputLayoutId"
        app:layout_constraintStart_toStartOf="@+id/usernameTextInputLayoutId"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayoutId"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingBottom="16dp"
            android:selectAllOnFocus="true"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButtonId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_round_button"
        android:enabled="true"
        android:text="@string/action_log_in"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayoutId"
        app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayoutId"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayoutId" />

    <ProgressBar
        android:id="@+id/progressBarId"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:indeterminate="true"
        android:indeterminateBehavior="repeat"
        android:indeterminateTint="@color/colorWhite"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/loginButtonId"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonId"
        app:layout_constraintStart_toStartOf="@+id/loginButtonId"
        app:layout_constraintTop_toTopOf="@+id/loginButtonId" />

    <TextView
        android:id="@+id/forgotPasswordTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password_string"
        android:textColor="#0336FF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonId"
        app:layout_constraintStart_toStartOf="@+id/loginButtonId"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonId" />

    <View
        android:id="@+id/leftHorizontalLineViewId"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="@+id/orLabelTextViewId"
        app:layout_constraintEnd_toStartOf="@+id/orLabelTextViewId"
        app:layout_constraintStart_toStartOf="@+id/loginButtonId"
        app:layout_constraintTop_toTopOf="@+id/orLabelTextViewId" />

    <TextView
        android:id="@+id/orLabelTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or_label_string"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordTextViewId"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordTextViewId"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextViewId" />

    <View
        android:id="@+id/rightHorizontalLineViewId"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toBottomOf="@+id/orLabelTextViewId"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonId"
        app:layout_constraintStart_toEndOf="@+id/orLabelTextViewId"
        app:layout_constraintTop_toTopOf="@+id/orLabelTextViewId" />

    <Button
        android:id="@+id/createAccountButtonId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="24dp"
        android:background="@drawable/create_account_round_button"
        android:enabled="true"
        android:text="@string/create_account_string"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rightHorizontalLineViewId"
        app:layout_constraintStart_toStartOf="@+id/leftHorizontalLineViewId"
        app:layout_constraintTop_toBottomOf="@+id/orLabelTextViewId" />

</androidx.constraintlayout.widget.ConstraintLayout>