<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <View
        android:id="@+id/id_top_view"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/view_bottom_round_corners_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTopTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="15dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_top_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/todayExpensesCardId"
        android:layout_width="0dp"
        android:layout_height="134dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="18dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_top_view">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/todayExpensesLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/advent_pro_semibold"
                android:text="@string/today_s_expenses_string"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalDayExpensesId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="1dp"
                android:text="@string/default_value_string"
                android:textColor="@color/colorDangerRed"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayExpensesLabelId" />

            <TextView
                android:id="@+id/addExpenseButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_view_border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:elevation="20dp"
                android:text="@string/add_expense_string"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="@+id/todayExpensesLabelId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalDayExpensesId" />

            <TextView
                android:id="@+id/viewExpenseButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_view_border"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:elevation="20dp"
                android:text="@string/view_expense_string"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/todayExpensesLabelId"
                app:layout_constraintTop_toBottomOf="@+id/totalDayExpensesId" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/yesterdayExpensesCardId"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayExpensesCardId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yesterdayExpenseLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/advent_pro_semibold"
                android:padding="1dp"
                android:text="@string/yesterday_s_expenses_string"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yesterdayNameLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:text="@string/yesterday_string"
                android:textColor="#D8AFA4A4"
                app:layout_constraintStart_toStartOf="@+id/yesterdayExpenseLabelId"
                app:layout_constraintTop_toBottomOf="@+id/yesterdayExpenseLabelId" />

            <TextView
                android:id="@+id/totalYesterdayExpenseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:padding="1dp"
                android:text="@string/default_value_string"
                android:textColor="@color/colorDangerRed"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/monthExpensesCardId"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesterdayExpensesCardId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/monthlyExpenseLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/advent_pro_semibold"
                android:padding="1dp"
                android:text="@string/monthly_expense_string"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/monthNameLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:text="@string/month_string"
                android:textColor="#D8AFA4A4"
                app:layout_constraintStart_toStartOf="@+id/monthlyExpenseLabelId"
                app:layout_constraintTop_toBottomOf="@+id/monthlyExpenseLabelId" />

            <TextView
                android:id="@+id/totalMonthlyExpenseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:padding="1dp"
                android:text="@string/default_value_string"
                android:textColor="@color/colorDangerRed"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/yearExpensesCardId"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthExpensesCardId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/yearExpenseLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/advent_pro_semibold"
                android:padding="1dp"
                android:text="@string/yearly_expense_string"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yearNameLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:text="@string/year_string"
                android:textColor="#D8AFA4A4"
                app:layout_constraintStart_toStartOf="@+id/yearExpenseLabelId"
                app:layout_constraintTop_toBottomOf="@+id/yearExpenseLabelId" />

            <TextView
                android:id="@+id/totalYearlyExpenseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:padding="1dp"
                android:text="@string/default_value_string"
                android:textColor="@color/colorDangerRed"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>