<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_expense_popup_background"
    tools:context=".activity.AddExpenseActivity">

    <TextView
        android:id="@+id/titleTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alex_brush"
        android:gravity="center_vertical"
        android:text="@string/add_string"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountSpentTextInputLayoutId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorWhite"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextViewId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountTextInputEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/hint_enter_amount_spent"
            android:inputType="number"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTextInputLayoutId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorWhite"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/amountSpentTextInputLayoutId"
        app:layout_constraintStart_toStartOf="@+id/amountSpentTextInputLayoutId"
        app:layout_constraintTop_toBottomOf="@+id/amountSpentTextInputLayoutId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateTextInputEditTextId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/hint_select_date"
            android:inputType="date"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInputLayoutId"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorWhite"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/dateTextInputLayoutId"
        app:layout_constraintStart_toStartOf="@+id/dateTextInputLayoutId"
        app:layout_constraintTop_toBottomOf="@+id/dateTextInputLayoutId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine|textCapSentences"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButtonId"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_label_save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/descriptionTextInputLayoutId"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayoutId" />


</androidx.constraintlayout.widget.ConstraintLayout>